--- a/snakeeyes/static/styles/main.css
+++ b/snakeeyes/static/styles/main.css
@@ -1,41 +1,48 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  padding-top: 50px;
-  padding-bottom: 20px;
+    padding-top: 50px;
+    padding-bottom: 20px;
 
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding-top: 10px;
-  border-top: 1px solid #e9e9e9;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
+    border-top: 1px solid #e9e9e9;
 
-  height: 60px;
+    height: 60px;
 }
 
 /* Margin and padding
 -------------------------------------------------- */
 .lg-margin-bottom {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .lg-margin-top {
-  margin-top: 60px;
+    margin-top: 60px;
 }
 
 .md-margin-top {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 
 .sm-margin-top {
-  margin-top: 20px;
+    margin-top: 20px;
+}
+
+.faq-my {
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: rgb(221, 15, 15);
+    margin-bottom: 1.2rem;
 }
